<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="android.bignerdranch.tarkovtimer.MedstationActivity">


    <TextView
        android:id="@+id/medstation_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medstation_layout"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ai2_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ai2_text" />

        <Button
            android:id="@+id/ai2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ifak_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ifak_text" />

        <Button
            android:id="@+id/ifak"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/grizzly_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grizzly_text" />

        <Button
            android:id="@+id/grizzly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>