<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="android.bignerdranch.tarkovtimer.LavatoryActivity">


    <TextView
        android:id="@+id/nutrition_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nutrition_layout"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/wilston_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wilston_text" />

        <Button
            android:id="@+id/wilston"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sugar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_text" />

        <Button
            android:id="@+id/sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lunchbox_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lunchbox_text" />

        <Button
            android:id="@+id/lunchbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>