<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id = "@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LavatoryActivity">

    <TextView
        android:id="@+id/lavatory_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lavatory_layout"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bleach_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bleach_text" />

        <Button
            android:id="@+id/bleach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/air_filter_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/air_filter_text" />

        <Button
            android:id="@+id/air_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/magcase_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mag_case_text" />

        <Button
            android:id="@+id/magcase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>