<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id= "@+id/parent"
    xmlns:tools = "http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context = ".MainActivity"
    android:gravity="center"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/workbench_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/workbench_layout"
        android:padding="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/blue_gunpowder_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_gunpowder_text" />

        <Button
            android:id="@+id/blue_gunpowder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/red_gunpowder_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_gunpowder_text" />

        <Button
            android:id="@+id/red_gunpowder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/green_gunpowder_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_gunpowder_text" />

        <Button
            android:id="@+id/green_gunpowder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craft_text"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/back_button" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/next_button" />

    </LinearLayout>

</LinearLayout>